# ld19-reflective-discovery

art/: title.xcf
game/: CMakeLists.txt
game/src/: CMakeLists.txt  GGame.cpp  GGame.h  GP_Game.cpp  GP_Game.h  GP_Title.cpp  GP_Title.h  GameApp.cpp  GameConstants.h  GameFrame.cpp  GameFrame.h  GamePanel.cpp  GamePanel.h
